made adjustments to posts

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -32,13 +32,14 @@ team:
     position: VP Initiatives
     email: louieweng@outlook.com
     linkedin: https://www.linkedin.com/in/louie-weng/
-    experience:
+    experience: Technology Consulting Intern @ Ernst & Young
     content: >
       Lorem ipsum dolor sit amet, ei brute voluptatum cum. Legere ignota ei mei, suas aperiam sea at. Duo brute graece pericula et, sed ne primis atomorum gubergren. Mei docendi oportere accusamus ut, suas feugait ut vim. Homero vulputate ei his.
       Pri et amet molestie, ignota perpetua eam cu. Ne mei partem ubique tritani, mel nullam molestiae voluptaria et, te malis veritus mel. Nam no velit augue salutatus, vel vocibus suscipit et. Ea duo numquam verterem philosophia, atqui malorum sanctus usu eu. Id inani oportere referrentur vis. Ignota dolorum adversarium id vix, augue interesset ea usu.
       Cu ius wisi malis posidonium, laudem definiebas ea has. Cu vim modo prima mediocrem. Per no noster persius, usu mazim epicurei expetenda in. Vix ea congue petentium, vis quas appellantur in, sed ex iriure fuisset iracundia. Eam in stet delicata, mel in quodsi conceptam. Nec civibus commune omittantur ea. Ut cum movet consetetur concludaturque, ne ius decore dicunt. 
       Ei nominavi cu vis, in postea atomorum usu. Et erroribus comprehensam duo. Ne quo iusto corrumpit. At his semper legimus luptatum. Id ius inimicus dignissim. Tation munere commune no ius, mel malorum virtute ex. Nullam inimicus est in, vix ludus vulputate ea. Et persius docendi suscipit ius, pro ea oblique commune, propriae consectetuer ne eam. Pro et velit iriure utroque. Nec an putant quaestio.
     specialization: BUCS
+    year: 3
     img: louie.svg
 
   - id: chloe
