minor changes to landing page

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -4,7 +4,7 @@ team:
     position: President
     email: cosas.sauder@gmail.com
     linkedin: https://www.linkedin.com/in/zhang-lerry/
-    experience: mPloy Solutions Inc.
+    experience: Business Analytics @ mPloy Solutions
     content: >
       Lorem ipsum dolor sit amet, ei brute voluptatum cum. Legere ignota ei mei, suas aperiam sea at. Duo brute graece pericula et, sed ne primis atomorum gubergren. Mei docendi oportere accusamus ut, suas feugait ut vim. Homero vulputate ei his.
       Pri et amet molestie, ignota perpetua eam cu. Ne mei partem ubique tritani, mel nullam molestiae voluptaria et, te malis veritus mel. Nam no velit augue salutatus, vel vocibus suscipit et. Ea duo numquam verterem philosophia, atqui malorum sanctus usu eu. Id inani oportere referrentur vis. Ignota dolorum adversarium id vix, augue interesset ea usu.
@@ -18,7 +18,7 @@ team:
     position: VP Finance
     email: yewenwca@outlook.com
     linkedin: https://www.linkedin.com/in/yewen-wang/
-    experience: UBC Sauder School of Business
+    experience: Recruitment & Admission Assistant @ UBC Sauder School of Business
     content: >
       Lorem ipsum dolor sit amet, ei brute voluptatum cum. Legere ignota ei mei, suas aperiam sea at. Duo brute graece pericula et, sed ne primis atomorum gubergren. Mei docendi oportere accusamus ut, suas feugait ut vim. Homero vulputate ei his.
       Pri et amet molestie, ignota perpetua eam cu. Ne mei partem ubique tritani, mel nullam molestiae voluptaria et, te malis veritus mel. Nam no velit augue salutatus, vel vocibus suscipit et. Ea duo numquam verterem philosophia, atqui malorum sanctus usu eu. Id inani oportere referrentur vis. Ignota dolorum adversarium id vix, augue interesset ea usu.
@@ -47,7 +47,7 @@ team:
     position: Director of Initiatives
     email: chloecharlottecarron@gmail.com
     linkedin: https://www.linkedin.com/in/cccarron/
-    experience: RBC
+    experience: Associate Credit Officer @ RBC
     content:
     specialization: Finance
     img: chloe.jpeg
@@ -57,7 +57,7 @@ team:
     position: Director of Initiatives
     email: mail2jeannette@gmail.com
     linkedin: https://www.linkedin.com/in/jeannetteyuen/
-    experience:
+    experience: Wealth Management Intern @ ScotiaMcleod
     content:
     specialization: Finance
     img: jeannette.jpg
@@ -67,7 +67,7 @@ team:
     position: Marketing Director
     email: mina.nakhostin1999@gmail.com
     linkedin: https://www.linkedin.com/in/minanakhostin/
-    experience: UBC Sauder School of Business
+    experience: Digital & Social Media Marketing @ UBC Sauder School of Business
     content:
     specialization: Marketing
     img: mina.jpeg
@@ -77,7 +77,7 @@ team:
     position: Associate Marketing Director
     email: Seynakim@gmail.com
     linkedin: https://www.linkedin.com/in/seynakim/
-    experience: WorkSafeBC
+    experience: Experience, Marketing, and Insights @ WorkSafeBC
     content:
     specialization: Marketing
     img: seyna.jpeg
