changed the contact form

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -1,7 +1,7 @@
 team:
   - id: lerry
     name: Lerry Zhang
-    position: President and VP Marketing
+    position: President
     year: 3
     email: cosas.sauder@gmail.com
     linkedin: https://www.linkedin.com/in/zhang-lerry/
